<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Spinner
        android:id="@+id/search_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/prompt_search_category"
        android:paddingTop="@dimen/spiner_padding"
        android:paddingBottom="@dimen/spiner_padding"
        android:textSize="@dimen/sub_title"
        />
    <FrameLayout
        android:id="@+id/search_condition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/by_main_sub"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <Spinner
                android:id="@+id/main_spin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_main_spin"
                android:paddingTop="@dimen/spiner_padding"
                android:paddingBottom="@dimen/spiner_padding"
                android:textSize="@dimen/sub_title"
                />
            <Spinner
                android:id="@+id/sub_spin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spiner_padding"
                android:paddingBottom="@dimen/spiner_padding"
                android:prompt="@string/prompt_sub_spin"
                android:textSize="@dimen/sub_title"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/by_composer"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <Spinner
                android:id="@+id/ccomposer_spin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spiner_padding"
                android:paddingBottom="@dimen/spiner_padding"
                android:prompt="@string/prompt_composer_spin"
                android:entries="@array/composer_category"
                android:textSize="@dimen/sub_title"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <Spinner
                    android:id="@+id/cgenre_spin"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:prompt="@string/prompt_genre_spin"
                    android:entries="@array/genre_category"
                    android:textSize="@dimen/sub_title"
                    />
                <Button
                    android:id="@+id/btn_genre_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_search_start"
                    android:textSize="@dimen/sub_title"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/by_keyword"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/keyword_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_keyword_input"
                android:textSize="@dimen/sub_title"
                />
            <Button
                android:id="@+id/btn_keyword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_search_start"
                android:textSize="@dimen/sub_title"
                />
        </LinearLayout>
    </FrameLayout>
    <ProgressBar android:id="@+id/progress_large"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/textEmptyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:visibility="gone" />

        <ListView
            android:id="@+id/control_music_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:layout_marginTop="5dp"
            />

    </FrameLayout>
</LinearLayout>