<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="60dp"
        android:background="@drawable/player_background"
        >
        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/background_image_id"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/player_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ProgressBar android:id="@+id/progress_large"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                >
                <ListView
                    android:id="@+id/music_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    />
                <!-- android:drawSelectorOnTop="false" -->
                <TextView
                    android:id="@+id/help_description_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/help_player"
                    android:textSize="@dimen/help_body_size"
                    android:textColor="@color/context_foreground"
                    android:lineSpacingExtra="3sp"
                    />
            </FrameLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_volume_label"
                    android:textSize="@dimen/view_content"
                    android:textColor="@color/context_foreground"
                    android:layout_gravity="center_vertical"
                    />
                <SeekBar
                    android:id="@+id/volume"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_volume_label"
                    android:textColor="@color/context_foreground"
                    android:textSize="@dimen/view_content"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/prog_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="@dimen/view_content"
                    android:textColor="@color/context_foreground"
                    />
                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textColor="@color/context_foreground"
                    android:textSize="@dimen/view_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_btn_layout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                >
                <ImageButton
                    android:id="@+id/previous_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:src="@android:drawable/ic_media_previous"
                    />
                <ImageButton
                    android:id="@+id/music_play_button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:src="@android:drawable/ic_media_play"
                    />
                <ImageButton
                    android:id="@+id/stop_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:src="@drawable/ic_menu_stop"
                    />
                <ImageButton
                    android:id="@+id/next_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:src="@android:drawable/ic_media_next"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <!-- adlib adview -->
<!--    <com.mocoplex.adlib.AdlibAdViewContainer
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ads"
        isDefaultBanner="true" />-->
</LinearLayout>

